--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+.count-header {
+  background-color: #1877f2;
+}
+
+.box-border {
+  border: 1px solid rgb(215, 71, 66)!important;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
